@@ -1,5 +1,7 @@
- * Changed logio reporting of bytes sent for a stream. Should now reflect the actual
-   payload bytes sent to the client.
+ * Fixed reporting of transferred bytes for mod_logio for modifiers %O (and %S) to
+   report the number of transferred header and body lengths. This is still only
+   an approximation of the bytes on the connection. The data is subject to header
+   compression and h2 framing afterwards. Grain of salt. Fixes #203.
  
 v1.15.14
 --------------------------------------------------------------------------------
